--- a/demo/web-viewer/style/style.scss
+++ b/demo/web-viewer/style/style.scss
@@ -80,19 +80,27 @@ $color-tosca: #914146;
 		}
 
 		.element-paragraph {
-			background-color: #aaffaa;
+			border: #aaffaa 2px solid;
+			/*background-color: #aaffaa;*/
 		}
 
 		.element-heading {
-			background-color: #aaffaa;
+			background-color: #aaffaa00;
 		}
 
 		.element-line {
-			background-color: #9999ff;
+			background-color: #9999ff00;
+			border-bottom: #9999ff 2px solid;
 		}
 
 		.element-word {
-			background-color: #ff9999;
+			background-color: #ff99996e;
+			display: table;
+		}
+
+		.element-word span {
+			display: table-cell;
+			vertical-align: middle;
 		}
 
 		.element-character {
@@ -100,16 +108,16 @@ $color-tosca: #914146;
 		}
 
 		.element-table {
-			background-color: orange;
+			background-color: rgba(255, 166, 0, 0);
 		}
 
 		.element-table-row {
-			background-color: rgb(0, 254, 255);
-			border: 1px solid black;
+			background-color: rgba(0, 254, 255, 0);
+			border: 1px solid rgba(0, 0, 0, 0);
 		}
 
 		.element-table-cell {
-			background-color: #d3ffe3;
+			background-color: #d3ffe300;
 			border: 1px solid black;
 			box-sizing: content-box;
 		}
